plugins {
	id 'java'
	id 'org.springframework.boot' version '3.0.0'
	id 'io.spring.dependency-management' version '1.1.0'
}

group = 'io.github.leofuso.kafka'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = JavaVersion.VERSION_19
targetCompatibility = JavaVersion.VERSION_19

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
    maven { url 'https://packages.confluent.io/maven/' }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.kafka:spring-kafka'
    implementation 'io.confluent:kafka-streams-avro-serde:7.3.0'

    implementation 'tech.allegro.schema.json2avro:converter:0.2.15'

	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.kafka:spring-kafka-test'
}

tasks {
    test {
        jvmArgs += [
                '--add-opens', 'java.base/java.util=ALL-UNNAMED'
        ]
        useJUnitPlatform()
    }
}